[project]
name = "nonebot-plugin-drop"
version = "0.1.0"
description = "nonebot-plugin-drop"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_drop"]
plugin_dirs = []
builtin_plugins = []

[tool.poetry]
name = "nonebot-plugin-drop"
version = "0.1.0"
description = ""
authors = ["Florenz <florenz@tju.edu.cn>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
nonebot-plugin-alconna = "^0.59.1"
nonebot-plugin-uninfo = "^0.8.2"
nonebot-plugin-localstore = "^0.7.4"
